hw2lecture7/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: echo-service
    spec:
      containers:
        - name: echo-service
          image: yamangulov/echo-service
          ports:
            - name: web
              containerPort: 8000
          readinessProbe:
            httpGet:
              port: 8000
              path: /health/
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: 8000
              path: /health/
            initialDelaySeconds: 15
            periodSeconds: 20
