hw2lecture7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service-service
spec:
  selector:
    app: echo-service
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8000
  type: NodePort
